<resources>
    <string name="app_name">myAndroidPos</string>
    <string name="fzy">fzy</string>
    <string name="pos">POS</string>
    <string name="name_station">OIL</string>
    <string name="icon">Icon</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_hint">Search Some</string>
    <string name="hi">HI</string>
    <string name="enter_text">Enter Text</string>
    <string name="dialog_title">RawBT printer driver is missed</string>
    <string name="dialog_message">To implement the functions of printing on a thermal printer, a driver is required. Press the button to open Google Play app and read more.</string>
    <string name="btn_install">Open</string>
    <string name="title_activity_item_detail_host">ItemDetailHostActivity</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="all_oil">今日加油总额：</string>
    <string name="num_trac">笔数</string>
    <string name="single_search">查询</string>
    <string name="sum_query">统计</string>


    <string name="print">打印</string>
    <string name="refund">退单</string>

    <string name="oilOrderId">订单ID</string>
    <string name="oilOrderTime">加油时间</string>
    <string name="user">用户手机号</string>
    <string name="oilName">油品名称</string>
    <string name="money">加油金额</string>
    <string name="discount">折扣金额</string>
    <string name="coupon">优惠券金额</string>
    <string name="balance">账户余额支付金额</string>
    <string name="cash">微信支付金额</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_text">TextActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>