<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_detail_oilOrderId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:text="@string/oilOrderId"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/tv_detail_oilOrderTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_below="@id/tv_detail_oilOrderId"
        android:text="@string/oilOrderTime"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/tv_detail_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:layout_below="@id/tv_detail_oilOrderTime"
        android:text="@string/user" />

    <TextView
        android:id="@+id/tv_detail_oilName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:layout_below="@id/tv_detail_user"
        android:text="@string/oilName" />

    <TextView
        android:id="@+id/tv_detail_money"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:layout_below="@id/tv_detail_oilName"
        android:text="@string/money"/>

    <TextView
        android:id="@+id/tv_detail_discount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:layout_below="@id/tv_detail_money"
        android:text="@string/discount" />

    <TextView
        android:id="@+id/tv_detail_coupon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:layout_below="@id/tv_detail_discount"
        android:text="@string/coupon" />

    <TextView
        android:id="@+id/tv_detail_balance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:layout_below="@id/tv_detail_coupon"
        android:text="@string/balance" />

    <TextView
        android:id="@+id/tv_detail_cash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:layout_below="@id/tv_detail_balance"
        android:text="@string/cash" />


    <Button
        android:id="@+id/btn_detail_print"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_above="@+id/btn_detail_refund"
        android:text="@string/print"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/btn_detail_refund"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:layout_alignParentBottom="true"
        android:text="@string/refund"
        android:textSize="20sp"/>

</RelativeLayout>

